--- a/src/main/webapp/asignaciontutores.html
+++ b/src/main/webapp/asignaciontutores.html
@@ -15,25 +15,37 @@
     </select>
 </div>
 
-
+<hr/>
 <button class="btn btn-sm btn-primary mb-2" id="asignar">Asignar</button>
 <button class="btn btn-sm btn-primary mb-2" id="Grabar" style="display:none">Grabar</button>
 <button class="btn btn-sm btn-primary mb-2" id="modificar">Modificar</button>
-<button class="btn btn-sm btn-primary mb-2" id="Grabarmodificar" style="display:none">Grabar</button>
-<div id="div-todos" style="display:none">
-    <input type="checkbox" id="select-all-checkbox"><label for="select-all-checkbox">Seleccionar todos</label>
-</div>
+<button class="btn btn-sm btn-primary mb-2" id="Grabarmodificar" style="display:none">Grabar</button>   
+
 <div class="form-group" id="tutor-select" style="display:none">
-    <label for="Docentes">Tutor:</label>
-    <select id="Docentes" class="form-control">
-        <option value="" selected disabled>Seleccione el Tutor</option>
-    </select>
+    <br/>
+    <div class="row align-items-center">
+        <div class="col-auto">
+            <label for="Docentes" class="col-form-label">Tutor:</label>
+        </div>
+        <div class="col">
+            <select id="Docentes" class="form-control">
+                <option value="" selected disabled>Seleccione el Tutor</option>
+            </select>
+        </div>
+        <div class="col">
+            <div id="div-todos" style="display:none">
+                <input type="checkbox" id="select-all-checkbox">
+                <label for="select-all-checkbox">Seleccionar todos</label>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="table-responsive">
     <table id="tabla-estudiantes" class="table table-striped table-bordered table-sm" style="width:100%">
         <thead>
             <tr>
+
                 <th>Código</th>
                 <th>Estudiante</th>
                 <th>Tutor</th>
