--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,10 +75,18 @@
 
             <div class="card">
                 <div class="card-header">
-                    <a class="btn btn-primary btn-sm rounded" id="mnuAsignacionTutores">Asignacion de Tutores</a>
-                    <a class="btn btn-primary btn-sm rounded" id="mnuReporteTutores">Reporte de Tutores </a>
-                    <a class="btn btn-primary btn-sm rounded" id="mnulistaReporteAlumnos">Reporte de Alumnos </a>
-                    <a class="btn btn-primary btn-sm rounded" id="mnubusquedaportutor">Busqueda por tutor </a>
+                    <a class="btn btn-primary btn-sm rounded" id="mnuAsignacionTutores">Administración</a>
+                    <a class="btn btn-primary btn-sm rounded" id="mnubusquedaportutor">Consulta</a>
+                    <div class="btn-group">
+                        <button class="btn btn-primary btn-sm rounded dropdown-toggle" type="button" id="dropdownReportes" data-bs-toggle="dropdown" aria-expanded="false">
+                            Reportes
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
+                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reportes</a></li>
+                            <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Alumnos</a></li>
+                        </ul>
+                    </div>
+
                     <p class="diseñosemestre" id="semestre"></p>
                 </div>
                 <div class="card-body" id="cardDdetalle">
@@ -96,6 +104,6 @@
         <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
         <script src="js/sb-admin-2.min.js"></script>
         <script src="js/index.js" type="text/javascript"></script>
-        
+
     </body>
 </html>
