--- a/src/main/webapp/busquedaportutor.html
+++ b/src/main/webapp/busquedaportutor.html
@@ -1,66 +1,86 @@
-
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Búsqueda por Tutor</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Búsqueda por Tutor</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            padding: 8px 12px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #007bff;
+            color: white;
+        }
+        .d-none {
+            display: none;
+        }
+    </style>
+</head>
+<body>
 
-            button {
-                background-color: #007bff;
-                color: white;
-                padding: 8px 12px;
-                border: none;
-                border-radius: 4px;
-                cursor: pointer;
-            }
+    <h3>Búsqueda por Tutor</h3>
+    <p>Selecciona un Semestre y un Alumno</p>
 
-            button:hover {
-                background-color: #0056b3;
-            }
+    <div class="form-group">
+        <label for="cmbSemestreAcademico">Semestre:</label>
+        <select id="cmbSemestreAcademico" class="form-control">
+            <option value="" selected disabled>Seleccione el Semestre</option>
+            <option value="2023-1">2023-1</option>
+            <option value="2023-2">2023-2</option>
+            <option value="2024-1">2024-1</option>
+        </select>
+    </div>
 
-        </style>
-    </head>
-    <body>
+    <div class="form-group">
+        <label for="inputAlumno">Alumno:</label>
+        <input type="text" id="inputAlumno" class="form-control" placeholder="Escribe el nombre..." autocomplete="off">
+    </div>
 
-        <h3>Búsqueda por Tutor</h3>
-        <p>Selecciona un Semestre y una Escuela</p>
+    <div class="form-group">
+        <button id="buscarxtutor">Buscar</button>
+    </div>
 
-        <div class="form-group">
-            <label for="cmbSemestreAcademico">Semestre:</label>
-            <select id="cmbSemestreAcademico" class="form-control">
-                <option value="" selected disabled>Seleccione el Semestre</option>
-            </select>
-        </div>
+    <div id="alerta" class="alert alert-warning d-none">Cargando...</div>
 
-        <div class="form-group">
-            <label for="inputAlumno">Alumno:</label>
-            <input type="text" id="inputAlumno" class="form-control" placeholder="Escribe el nombre..." autocomplete="off">
-        </div>
+    <hr/>
 
+    <!-- Tabla de resultados -->
+    <table id="tablaResultados" class="d-none">
+        <thead>
+            <tr>
+                <th>Alumno</th>
+                <th>Tutor</th>
+                <th>Ciclo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Aquí irán los resultados dinámicamente -->
+        </tbody>
+    </table>
 
+    <script src="js/busquedaportutor.js" defer></script>
 
-        <div class="form-group">
-            <button class="btn btn-sm btn-primary mb-2" id="buscarxtutor">Buscar</button>
-        </div>
-        <div id="alerta" class="alert alert-warning  d-none" role="alert">
-            Cargando...
-        </div>
-
-
-        <hr/>
-
-
-
-
-
-        <script src="js/busquedaportutor.js" defer></script>
-
-    </body>
+</body>
 </html>
-
-
