se modifico los dropdown los nombres

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,7 +69,7 @@
                             Reportes
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
-                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reportes</a></li>
+                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Tutores</a></li>
                             <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Alumnos</a></li>
                         </ul>
                     </div>
