se modifico panel director html

--- a/src/main/webapp/paneldirector.html
+++ b/src/main/webapp/paneldirector.html
@@ -71,6 +71,7 @@
                         <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
                             <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Tutores</a></li>
                             <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Alumnos</a></li>
+                            <li><a class="dropdown-item" id="mnulistaReporteAlumnossintutor" href="#">Reporte de Alumnos sin Tutor</a></li>
                         </ul>
                     </div>
                     <p class="diseñosemestre" id="semestre"></p>
