Se hizo cambios en actividad

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,13 @@
         <script src="vendor/jquery/jquery.min.js"></script>
         <script >
             $(document).ready(function () {
+                $("#btnPanelTutor").click(function () {
+                    window.location.href = "paneltutor.html";
+                   /* let param = {};
+                    $.getJSON("paneldirector", param, function (data) {
+                        
+                    });*/
+                });
                 $("#btnPanelDirector").click(function () {
                     window.location.href = "paneldirector.html";
                    /* let param = {};
