--- a/src/main/webapp/paneldirector.html
+++ b/src/main/webapp/paneldirector.html
@@ -1,6 +1,6 @@
 <html lang="es">
     <head>
-        <title>Asignación de tutores</title>
+        <title>Panel del Director</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
