Se hizo cambios en asistencia, incidencia

--- a/src/main/webapp/paneltutor.html
+++ b/src/main/webapp/paneltutor.html
@@ -63,16 +63,17 @@
         <div class="container mt-5">
             <div class="card">
                 <div class="card-header">
-                    <a class="btn btn-primary btn-sm rounded" id="mnuAsignacionTutores">Creacion Actividad</a>
-                    <a class="btn btn-primary btn-sm rounded" id="mnubusquedaportutor">Asistencias Actividad</a>
-                    <a class="btn btn-primary btn-sm rounded" id="mnubusquedaportutor">Incidencias</a>
+                    <a class="btn btn-primary btn-sm rounded" id="mnuActividad">Actividad</a>
+                    <a class="btn btn-primary btn-sm rounded" id="mnuAsistencia">Asistencia</a>
+                    <a class="btn btn-primary btn-sm rounded" id="mnuIncidencias">Incidencias</a>
                     <div class="btn-group">
                         <button class="btn btn-primary btn-sm rounded dropdown-toggle" type="button" id="dropdownReportes" data-bs-toggle="dropdown" aria-expanded="false">
                             Reportes
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
-                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Tutores</a></li>
-                            <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Alumnos</a></li>
+                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Actividades</a></li>
+                            <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Asistencias</a></li>
+                            <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Incidencias</a></li>
                         </ul>
                     </div>
                     <p class="diseñosemestre" id="semestre"></p>
