--- a/src/main/webapp/creacionactividad.html
+++ b/src/main/webapp/creacionactividad.html
@@ -1,6 +1,6 @@
-<div class="container mt-5">
-    <h3>Actividades</h3>
-    <p id="semestre"></p>
+
+    <h4>Actividades</h4>
+    <!--<p id="semestre"></p>-->
     <button class="btn btn-sm btn-primary mb-2" id="crear">Crear Actividad</button>
 
     <div class="table-responsive">
@@ -20,7 +20,6 @@
             </tbody>
         </table>
     </div>
-</div>
 <!-- Modal agregar-->
 <div id="modal-agregar" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalAgregarLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
