se modifico busqueda por tutor

--- a/src/main/webapp/busquedaportutor.html
+++ b/src/main/webapp/busquedaportutor.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-    <h3>Búsqueda por Tutor</h3>
+    <h3>Búsqueda por Alumno</h3>
     <p>Selecciona un Semestre y un Alumno</p>
 
     <div class="form-group">
@@ -70,6 +70,7 @@
                 <th>Alumno</th>
                 <th>Tutor</th>
                 <th>Ciclo</th>
+                <th>Escuela</th>
             </tr>
         </thead>
         <tbody>
