se modifico los cambios

--- a/src/main/webapp/paneltutor.html
+++ b/src/main/webapp/paneltutor.html
@@ -71,7 +71,7 @@
                             Reportes
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
-                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Actividades</a></li>
+                            <li><a class="dropdown-item" id="mnuReporteActividades" href="#">Reporte de Actividades</a></li>
                             <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Asistencias</a></li>
                             <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Incidencias</a></li>
                         </ul>
