--- a/src/main/webapp/asistencias.html
+++ b/src/main/webapp/asistencias.html
@@ -1,30 +1,29 @@
-    <h4>Asistencias</h4>
-    <p id="semestre"></p>
-    <div class="form-group">
-        <label for="sesion">Sesion:</label>
-        <select id="sesion" class="form-control">
-            <option value="" selected disabled>Seleccione la sesion</option>
-        </select>
-    </div>
+<h4>Asistencias</h4>
+<p id="semestre"></p>
+<div class="form-group">
+    <label for="sesion">Sesion:</label>
+    <select id="sesion" class="form-control">
+        <option value="" selected disabled>Seleccione la sesion</option>
+    </select>
+</div>
 
-    <button class="btn btn-sm btn-primary mb-2" id="asignar">Poner Asistencias</button>
-    <button class="btn btn-sm btn-primary mb-2" id="Grabar" style="display:none">Grabar</button>
+<button class="btn btn-sm btn-primary mb-2" id="asignar">Poner Asistencias</button>
+<button class="btn btn-sm btn-primary mb-2" id="Grabar" style="display:none">Grabar</button>
+<button class="btn btn-sm btn-success mb-2" id="marcar-todos">Marcar Todos como Asistieron</button> <!-- Nuevo botón -->
 
-    <div class="table-responsive">
-        <table id="tabla-estudiantes" class="table table-striped table-bordered table-sm" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Código</th>
-                    <th>Estudiante</th>
-                    <th>Asistencia</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Aquí se insertarán las filas dinámicamente -->
-            </tbody>
-        </table>
-    </div>
-
-
+<div class="table-responsive">
+    <table id="tabla-estudiantes" class="table table-striped table-bordered table-sm" style="width:100%">
+        <thead>
+            <tr>
+                <th>Código</th>
+                <th>Estudiante</th>
+                <th>Asistencia</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Aquí se insertarán las filas dinámicamente -->
+        </tbody>
+    </table>
+</div>
 
 <script src="js/asistencias.js" type="text/javascript"></script>
