--- a/src/main/webapp/busquedaportutor.html
+++ b/src/main/webapp/busquedaportutor.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Búsqueda por Tutor</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        button {
+         button {
             background-color: #007bff;
             color: white;
             padding: 8px 12px;
@@ -18,23 +15,6 @@
         }
         button:hover {
             background-color: #0056b3;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #007bff;
-            color: white;
-        }
-        .d-none {
-            display: none;
         }
     </style>
 </head>
@@ -64,7 +44,7 @@
     <hr/>
 
     <!-- Tabla de resultados -->
-    <table id="tablaResultados" class="d-none">
+    <table id="tablaResultados" class="table table-striped table-bordered table-sm d-none" >
         <thead>
             <tr>
                 <th>Alumno</th>
