--- a/src/main/webapp/busquedaportutor.html
+++ b/src/main/webapp/busquedaportutor.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="form-group">
-        <button id="buscarxtutor">Buscar</button>
+        <button class="btn btn-sm btn-primary mb-2" id="buscarxtutor">Buscar</button>
     </div>
 
     <div id="alerta" class="alert alert-warning d-none">Cargando...</div>
