se modifico los cambios de tutor

--- a/src/main/webapp/asistencias.html
+++ b/src/main/webapp/asistencias.html
@@ -9,7 +9,10 @@
 
 <button class="btn btn-sm btn-primary mb-2" id="asignar">Poner Asistencias</button>
 <button class="btn btn-sm btn-primary mb-2" id="Grabar" style="display:none">Grabar</button>
-<button class="btn btn-sm btn-success mb-2" id="marcar-todos">Marcar Todos como Asistieron</button> <!-- Nuevo botón -->
+    <div id="div-todos" style="display:none">
+        <input type="checkbox" id="marcar-todos">
+        <label for="select-all-checkbox">Seleccionar asistieron todos</label>
+    </div>
 
 <div class="table-responsive">
     <table id="tabla-estudiantes" class="table table-striped table-bordered table-sm" style="width:100%">
