--- a/src/main/webapp/paneltutor.html
+++ b/src/main/webapp/paneltutor.html
@@ -56,6 +56,8 @@
             .diseñosemestre {
                 text-align: right;
                 margin-top: -40px;
+                
+                
             }
         </style>
     </head>
@@ -77,6 +79,7 @@
                         </ul>
                     </div>
                     <p class="diseñosemestre" id="semestre"></p>
+                    <p style="margin-bottom: 0px;" id="lbldocente"> CARGANDO DOCENTE....</p>
                 </div>
                 <div class="card-body" id="cardDdetalle">
                 </div>
