se modifico paneltutor

--- a/src/main/webapp/reporteasistencias.html
+++ b/src/main/webapp/reporteasistencias.html
@@ -9,9 +9,9 @@
 </div>
 
 <div class="form-group" id="tutor-select" >
-    <label for="Docentes">Tutor:</label>
-    <select id="cmbDocentes" class="form-control">
-        <option value="" selected disabled>Seleccione el Tutor</option>
+    <label for="Docentes">Sesion:</label>
+    <select id="cmbSesion" class="form-control">
+        <option value="" selected disabled>Seleccione la sesion</option>
     </select>
 </div>
 
