se modifico paneltutores

--- a/src/main/webapp/paneltutor.html
+++ b/src/main/webapp/paneltutor.html
@@ -75,7 +75,7 @@
                         <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
                             <li><a class="dropdown-item" id="mnuReporteActividades" href="#">Reporte de Actividades</a></li>
                             <li><a class="dropdown-item" id="mnulistaReporteAsistencias" href="#">Reporte de Asistencias</a></li>
-                            <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Incidencias</a></li>
+                            <li><a class="dropdown-item" id="mnulistaReporteincidencias" href="#">Reporte de Incidencias</a></li>
                         </ul>
                     </div>
                     <p class="diseñosemestre" id="semestre"></p>
