--- a/src/main/webapp/reporteasistencias.html
+++ b/src/main/webapp/reporteasistencias.html
@@ -1,6 +1,6 @@
 <h3>Reporte de Asistencias</h3>
 
-<p>Selecciona un Semestre Y  Tutor</p>
+<p>Selecciona un Semestre Y una Sesion</p>
 <div class="form-group">
     <label for="semestreacademico">Semestre:</label>
     <select id="cmbSemestreAcademico" class="form-control">
