--- a/src/main/webapp/creacionactividad.html
+++ b/src/main/webapp/creacionactividad.html
@@ -95,3 +95,9 @@
     </div>
 </div>
 <script src="js/creacionactividad.js" type="text/javascript"></script>
+
+<!-- Popper.js (necesario para los modales) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
