se modifico los cambios

--- a/src/main/webapp/paneldirector.html
+++ b/src/main/webapp/paneldirector.html
@@ -56,6 +56,12 @@
                 text-align: right;
                 margin-top: -40px;
             }
+            #btnCerrarSesion {
+                float: right;
+                margin-top: 20px; /* Ajusta este valor para moverlo más abajo */
+                border-color: #c82333;
+                color: white;
+            }
         </style>
     </head>
     <body>
@@ -75,6 +81,7 @@
                         </ul>
                     </div>
                     <p class="diseñosemestre" id="semestre"></p>
+                    <button class="btn btn-sm btn-primary mb-2" id="btnCerrarSesion">Cerrar Sesión</button>
                 </div>
                 <div class="card-body" id="cardDdetalle">
                 </div>
