--- a/src/main/webapp/paneldirector.html
+++ b/src/main/webapp/paneldirector.html
@@ -13,100 +13,120 @@
 
         <style>
             body {
-                font-family: 'Nunito', sans-serif;
-                background-color: #f8f9fc;
-                color: #333;
-            }
-            .container {
-                background-color: #fff;
-                border: 1px solid #ddd;
-                padding: 20px;
-                border-radius: 5px;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            }
-            h1, label {
-                color: #0056b3;
-            }
-            .form-group label {
-                font-weight: bold;
-            }
-            .btn-primary {
-                background-color: #0056b3;
-                border-color: #004a9f;
-            }
-            .btn-primary:hover {
-                background-color: #004a9f;
-                border-color: #003d86;
-            }
-            .table {
-                background-color: #fff;
-                border: 1px solid #dee2e6;
-                margin-top: 20px;
-            }
-            .table thead th {
-                background-color: #0056b3;
-                color: #fff;
-                text-align: center;
-            }
-            .table tbody tr:hover {
-                background-color: #f1f1f1;
-            }
-            .table tbody td {
-                text-align: center;
-            }
-            .diseñosemestre {
-                text-align: right;
-                margin-right: 20px; /* Ajusta el valor según lo necesites */
-                margin-top: -40px;
-            }
-            #btnCerrarSesion {
-                float: right;
-                margin-top: -18px; /* Ajusta este valor para moverlo más abajo */
-                border-color: #c82333;
-                color: white;
-            }
-            .card-header {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-top: -18px;
-                position: relative;
-                top: 1px; /* Ajusta el valor */
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-5">
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn btn-primary btn-sm rounded" id="mnuAsignacionTutores">Administración</a>
-                    <a class="btn btn-primary btn-sm rounded" id="mnubusquedaportutor">Consulta</a>
-                    <div class="btn-group">
-                        <button class="btn btn-primary btn-sm rounded dropdown-toggle" type="button" id="dropdownReportes" data-bs-toggle="dropdown" aria-expanded="false">
-                            Reportes
+            font-family: 'Nunito', sans-serif;
+            background-color: #f8f9fc;
+            color: #333;
+        }
+        .container {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, label {
+            color: #0056b3;
+        }
+        .form-group label {
+            font-weight: bold;
+        }
+        .btn-primary {
+            background-color: #0056b3;
+            border-color: #004a9f;
+        }
+        .btn-primary:hover {
+            background-color: #004a9f;
+            border-color: #003d86;
+        }
+        .table {
+            background-color: #fff;
+            border: 1px solid #dee2e6;
+            margin-top: 20px;
+        }
+        .table thead th {
+            background-color: #0056b3;
+            color: #fff;
+            text-align: center;
+        }
+        .table tbody tr:hover {
+            background-color: #f1f1f1;
+        }
+        .table tbody td {
+            text-align: center;
+        }
+        .diseñosemestre {
+            text-align: right;
+            margin-right: 20px;
+            margin-top: -40px;
+        }
+        #btnCerrarSesion {
+            float: right;
+            margin-top: -18px;
+            border-color: #c82333;
+            color: white;
+        }
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: -18px;
+            position: relative;
+        }
+        #mensajeAccesoDenegado {
+            display: none;
+            text-align: center;
+            font-weight: bold;
+            padding: 20px;
+        }
+            </style>
+        </head>
+        <body>
+            <div class="container mt-5">
+                <div class="card">
+                    <div class="card-header">
+                        <a class="btn btn-primary btn-sm rounded" id="mnuAsignacionTutores">Administración</a>
+                        <a class="btn btn-primary btn-sm rounded" id="mnubusquedaportutor">Consulta</a>
+                        <div class="btn-group">
+                            <button class="btn btn-primary btn-sm rounded dropdown-toggle" type="button" id="dropdownReportes" data-bs-toggle="dropdown" aria-expanded="false">
+                                Reportes
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
+                                <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Tutores</a></li>
+                                <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Alumnos</a></li>
+                                <li><a class="dropdown-item" id="mnulistaReporteAlumnossintutor" href="#">Reporte de Alumnos sin Tutor</a></li>
+                            </ul>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-primary btn-sm rounded dropdown-toggle" type="button" id="dropdownReportes" data-bs-toggle="dropdown" aria-expanded="false">
+                                Reportes de Tutores
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
+                                <li><a class="dropdown-item" id="mnuReporteActividades" href="#">Reporte de Actividades</a></li>
+                                <li><a class="dropdown-item" id="mnulistaReporteAsistencias" href="#">Reporte de Asistencias</a></li>
+                                <li><a class="dropdown-item" id="mnulistaReporteincidencias" href="#">Reporte de Incidencias</a></li>
+                            </ul>
+                        </div>
+                        <p class="diseñosemestre" id="semestre"></p>
+                        <button class="btn btn-sm btn-primary mb-2" id="btnCerrarSesion">
+                            <i class="fas fa-sign-out-alt"></i>
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownReportes">
-                            <li><a class="dropdown-item" id="mnuReporteTutores" href="#">Reporte de Tutores</a></li>
-                            <li><a class="dropdown-item" id="mnulistaReporteAlumnos" href="#">Reporte de Alumnos</a></li>
-                            <li><a class="dropdown-item" id="mnulistaReporteAlumnossintutor" href="#">Reporte de Alumnos sin Tutor</a></li>
-                        </ul>
                     </div>
-                    <p class="diseñosemestre" id="semestre"></p>
-                    <button class="btn btn-sm btn-primary mb-2" id="btnCerrarSesion">
-                        <i class="fas fa-sign-out-alt"></i>
-                    </button>
-                </div>
-                <div class="card-body" id="cardDdetalle">
+                    <div class="card-body" id="cardDdetalle">
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- Scripts -->
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-        <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-        <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-        <script src="js/sb-admin-2.min.js"></script>
-        <script src="js/paneldirector.js" type="text/javascript"></script>
-    </body>
-</html>
+            <!-- Mensaje de acceso denegado -->
+            <div id="mensajeAccesoDenegado">
+                <h2  style="color: red">¡GRACIAS POR USAR EL MÓDULO DE TUTORIA!</h2>
+                    <p style="color:black">No olvide cerrar la ventana.</p>
+                </div>
+                <!-- Scripts -->
+                <script src="vendor/jquery/jquery.min.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+                <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+                <script src="vendor/datatables/jquery.dataTables.min.js"></script>
+                <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+                <script src="js/sb-admin-2.min.js"></script>
+                <script src="js/paneldirector.js" type="text/javascript"></script>
+            </body>
+        </html>
