--- a/src/main/webapp/ReporteIncidenciasDirector.html
+++ b/src/main/webapp/ReporteIncidenciasDirector.html
@@ -2,21 +2,16 @@
 
 <p>Selecciona un Semestre</p>
 <div class="form-group">
-    <label for="semestreacademico">Semestre:</label>
-    <select id="cmbSemestreAcademico" class="form-control">
-        <option value="" selected disabled>Seleccione El Semestre</option>
-    </select>
+    <label for="inputAlumno">Alumno:</label>
+    <input type="text" id="inputAlumno" class="form-control" placeholder="Escribe el nombre..." autocomplete="off">
 </div>
-<div class="form-group" id="tutor-select" >
-    <label for="Docentes">Tutor:</label>
-    <select id="cmbDocentes" class="form-control">
-        <option value="" selected disabled>Seleccione el Tutor</option>
-    </select>
-</div>
+
+<div id="alerta" class="alert alert-warning d-none">Cargando...</div>
+
+<hr/>
 <button class="btn btn-sm btn-primary mb-2" id="btnImprimir">Imprimir Reporte de Incidencias</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js" defer=""></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js" defer></script>
 
-<script src="js/reporteincidenciasdirector.js" defer></script>
-
+<script src="js/reporteincidencias.js" defer></script>
