--- a/src/main/webapp/busquedaportutor.html
+++ b/src/main/webapp/busquedaportutor.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-    <h3>Búsqueda por Alumno</h3>
+    <h3>Consulta de tutor por Alumno</h3>
     <p>Selecciona un Semestre y un Alumno</p>
 
     <div class="form-group">
@@ -32,7 +32,7 @@
 
     <div class="form-group">
         <label for="inputAlumno">Alumno:</label>
-        <input type="text" id="inputAlumno" class="form-control" placeholder="Escribe el nombre..." autocomplete="off">
+        <input type="text" id="inputAlumno" class="form-control" placeholder="Escribe el apellido del alumno..." autocomplete="off">
     </div>
 
     <div class="form-group">
