--- a/src/main/webapp/creacionactividad.html
+++ b/src/main/webapp/creacionactividad.html
@@ -33,7 +33,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label for="actividad-nombre">Actividad</label>
-                    <input type="text" class="form-control" id="actividad-nombre" placeholder="Nombre de la actividad" required>
+                    <input type="text" class="form-control" id="actividad-nombre" placeholder="Nombre de la actividad" maxlength="150" required>
                 </div>
                 <div class="form-group">
                     <label for="actividad-tipo">Tipo</label>
@@ -42,12 +42,12 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="actividad-fecha">Fecha</label>
+                    <label for="actividad-fecha">Fecha y Hora</label>
                     <input type="datetime-local" class="form-control" id="actividad-fecha" required>
                 </div>
                 <div class="form-group">
                     <label for="actividad-lugar">Lugar</label>
-                    <input type="text" class="form-control" id="actividad-lugar" placeholder="Lugar de la actividad" required>
+                    <input type="text" class="form-control" id="actividad-lugar" placeholder="Lugar de la actividad" maxlength="150" required>
                 </div>
             </div>
             <div class="modal-footer">
