--- a/src/main/webapp/reporteincidencias.html
+++ b/src/main/webapp/reporteincidencias.html
@@ -5,13 +5,26 @@
     <label for="inputAlumno">Alumno:</label>
     <input type="text" id="inputAlumno" class="form-control" placeholder="Escribe el nombre..." autocomplete="off">
 </div>
+<br/>
+<button class="btn btn-sm btn-primary mb-2" id="btnBuscarAlumno">Buscar Alumno</button>
 
 <div id="alerta" class="alert alert-warning d-none">Cargando...</div>
 
 <hr/>
-<button class="btn btn-sm btn-primary mb-2" id="btnImprimir">Imprimir Reporte de Incidencias</button>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js" defer=""></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js" defer></script>
+
+
+<table id="tablaResultados" class="table table-striped table-bordered table-sm d-none" >
+    <thead>
+        <tr>
+            <th>Alumno</th>         
+            <th>Imprimir</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Aquí irán los resultados dinámicamente -->
+    </tbody>
+</table>
+
 
 <script src="js/reporteincidencias.js" defer></script>
