se modifico el panel de director

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,11 @@
 <html lang="es">
     <head>
         <title>Panel principal</title>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     </head>
     <body>
+        Módulo de Tutoría 1.0
         <!--<button id="btnPanelDirector">Panel Director</button>-->
         <!--<button id="btnPanelTutor">Panel Tutor</button>-->
         
